update not completed